tests/errors/test_73.xpp
// Invalid continue usage

fn main() void {
	continue;
}
